; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_reject_updates_to_hidden.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_reject_updates_to_hidden.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i32 }
%struct.command = type { i8*, i32, i32, %struct.command* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@.str = private unnamed_addr constant [27 x i8] c"deny deleting a hidden ref\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"deny updating a hidden ref\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.command*)* @reject_updates_to_hidden to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reject_updates_to_hidden(%struct.command* %0) #0 {
  %2 = alloca %struct.command*, align 8
  %3 = alloca %struct.strbuf, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.command*, align 8
  store %struct.command* %0, %struct.command** %2, align 8
  %6 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 16, i1 false)
  %7 = call i32 (...) @get_git_namespace()
  %8 = call i32 @strbuf_addstr(%struct.strbuf* %3, i32 %7)
  %9 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %4, align 8
  %11 = load %struct.command*, %struct.command** %2, align 8
  store %struct.command* %11, %struct.command** %5, align 8
  br label %12

12:                                               ; preds = %48, %1
  %13 = load %struct.command*, %struct.command** %5, align 8
  %14 = icmp ne %struct.command* %13, null
  br i1 %14, label %15, label %52

15:                                               ; preds = %12
  %16 = load %struct.command*, %struct.command** %5, align 8
  %17 = getelementptr inbounds %struct.command, %struct.command* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %48

21:                                               ; preds = %15
  %22 = load i64, i64* %4, align 8
  %23 = call i32 @strbuf_setlen(%struct.strbuf* %3, i64 %22)
  %24 = load %struct.command*, %struct.command** %5, align 8
  %25 = getelementptr inbounds %struct.command, %struct.command* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @strbuf_addstr(%struct.strbuf* %3, i32 %26)
  %28 = load %struct.command*, %struct.command** %5, align 8
  %29 = getelementptr inbounds %struct.command, %struct.command* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @ref_is_hidden(i32 %30, i32 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %21
  br label %48

36:                                               ; preds = %21
  %37 = load %struct.command*, %struct.command** %5, align 8
  %38 = getelementptr inbounds %struct.command, %struct.command* %37, i32 0, i32 1
  %39 = call i64 @is_null_oid(i32* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %36
  %42 = load %struct.command*, %struct.command** %5, align 8
  %43 = getelementptr inbounds %struct.command, %struct.command* %42, i32 0, i32 0
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8** %43, align 8
  br label %47

44:                                               ; preds = %36
  %45 = load %struct.command*, %struct.command** %5, align 8
  %46 = getelementptr inbounds %struct.command, %struct.command* %45, i32 0, i32 0
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i8** %46, align 8
  br label %47

47:                                               ; preds = %44, %41
  br label %48

48:                                               ; preds = %47, %35, %20
  %49 = load %struct.command*, %struct.command** %5, align 8
  %50 = getelementptr inbounds %struct.command, %struct.command* %49, i32 0, i32 3
  %51 = load %struct.command*, %struct.command** %50, align 8
  store %struct.command* %51, %struct.command** %5, align 8
  br label %12

52:                                               ; preds = %12
  %53 = call i32 @strbuf_release(%struct.strbuf* %3)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i32) #2

declare dso_local i32 @get_git_namespace(...) #2

declare dso_local i32 @strbuf_setlen(%struct.strbuf*, i64) #2

declare dso_local i32 @ref_is_hidden(i32, i32) #2

declare dso_local i64 @is_null_oid(i32*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
